<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- for basic -->
    <string name="app_name">Weiboshengrihui</string>
    <string name="Homepage">Homepage</string>
    <string name="Friends">Friends</string>
    <string name="Settings">Settings</string>
    <string name="default_name">default</string>
    <string name="undefined">undefined</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>

    <!-- for homepage -->
    <string name="Birthday">Birthday</string>
    <string name="Location">Location</string>
    <string name="Nickname">Nickname</string>
    <string name="Interesting">Interesting</string>
    <string name="Gender">Gender</string>
    <string name="Want">Want</string>
    <string name="Have">Have</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>

    <!-- for login -->
    <string name="uname">Username</string>
    <string name="upwd">Password</string>
    <string name="login_text">Login</string>
    <string name="rights_text">©zouliping</string>

    <!-- for settings -->
    <string name="pdc_setting">PDC Privacy</string>
    <string name="privacy">Privacy</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="developer">Developer</string>
    <string name="github">Github</string>
    <string name="feedback">Feedback</string>
    <string name="public_visible">Public</string>
    <string name="friends_visible">Friends Visible</string>
    <string name="service_visible">Services Visible</string>
    <string name="privacy_type_title">Privacy Type</string>
    <string name="privacy_class_title">Choose Class</string>
    <string name="privacy_pro_title">Choose Properties</string>
    <string name="privacy_pro_map_key">title</string>

    <!-- for production -->
    <string name="Title">Title:</string>
    <string name="Type">Type:</string>
    <string name="Description">Description:</string>
    <string name="sendTo">Send To Whom</string>

    <!-- for titile -->
    <string name="title_friend_detail">Friend Detail</string>
    <string name="title_production_detail">Production Detail</string>

</resources>