<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/card_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/common_list_large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title" />

        <TextView
            android:id="@+id/production_title"
            style="@style/common_list_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/common_list_large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type" />

        <TextView
            android:id="@+id/production_tpye"
            style="@style/common_list_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/common_list_large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description" />

        <TextView
            android:id="@+id/production_description"
            style="@style/common_list_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</LinearLayout>